<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layoutAbout"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/txtAboutApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDark"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"
            android:text="@string/about"/>

        <ImageView
            android:id="@+id/aboutRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_right"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/aboutRight"
            android:background="@color/colorBlack"></View>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutPolicy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/layoutAbout">

        <TextView
            android:id="@+id/txtPolicyApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDark"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"
            android:text="@string/policy"/>

        <ImageView
            android:id="@+id/policyRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_right"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/policyRight"
            android:background="@color/colorBlack"></View>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutTerm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/layoutPolicy">

        <TextView
            android:id="@+id/txtTermApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDark"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"
            android:text="@string/term"/>

        <ImageView
            android:id="@+id/termRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_right"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/termRight"
            android:background="@color/colorBlack"></View>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layoutShareApp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/layoutTerm">

        <TextView
            android:id="@+id/txtShareApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDark"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"
            android:text="@string/share"/>

        <ImageView
            android:id="@+id/shareRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:visibility="invisible"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_right"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/shareRight"
            android:background="@color/colorBlack"></View>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutDownloadApp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/layoutShareApp">

        <TextView
            android:id="@+id/txtDownloadApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDark"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"
            android:text="@string/download"/>

        <ImageView
            android:id="@+id/downloadRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:visibility="invisible"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_right"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/downloadRight"
            android:background="@color/colorBlack"></View>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layoutRateUs"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/layoutDownloadApp">

        <TextView
            android:id="@+id/txtRateUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDark"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"
            android:text="@string/rate"/>

        <ImageView
            android:id="@+id/rateusRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:visibility="invisible"
            android:src="@drawable/ic_right"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/rateusRight"
            android:background="@color/colorBlack"></View>

    </RelativeLayout>
</RelativeLayout>