<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:elevation="10dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomLayout"
        android:layout_below="@+id/appbar">

        <RelativeLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:src="@mipmap/ic_launcher" />

            <RelativeLayout
                android:id="@+id/requiredLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgLogo"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <LinearLayout
                    android:id="@+id/countryblock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom">

                        <ImageView
                            android:id="@+id/countryFlag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:src="@mipmap/in_flag" />

                        <TextView
                            android:id="@+id/countryCode"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="bottom"
                            android:gravity="bottom"
                            android:paddingBottom="11dp"
                            android:text="+91"
                            android:textColor="@android:color/black"
                            android:theme="@style/TextLabel"/>
                    </LinearLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inFirst"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:theme="@style/TextLabel"
                        app:passwordToggleDrawable="@drawable/ic_password_visibility_selector"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtContact"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:hint="@string/register_contact"
                            android:inputType="number"
                            android:maxLines="1"
                            android:textColor="@color/colorBlack" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inSecond"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/countryblock"
                    android:layout_marginTop="10dp"
                    android:theme="@style/TextLabel"
                    app:passwordToggleDrawable="@drawable/ic_password_visibility_selector"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:hint="@string/register_email"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/colorBlack" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inThird"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/inSecond"
                    android:layout_marginTop="10dp"
                    android:theme="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/register_user_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/colorBlack" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inFour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/inThird"
                    android:layout_marginTop="10dp"
                    android:theme="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:hint="@string/register_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/colorBlack" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inFive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/inFour"
                    android:layout_marginTop="10dp"
                    android:theme="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtConPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:hint="@string/register_confirm_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/colorBlack" />
                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:id="@+id/photoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/inFive">

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/imgUserImage"
                        android:layout_width="62dp"
                        android:layout_height="62dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight=".1"
                        android:paddingLeft="20dp"
                        android:src="@drawable/ic_placeholder"
                        app:civ_border_color="@color/white_trans"
                        app:civ_border_width="1dp"
                        app:civ_shadow="true"
                        app:civ_shadow_color="@color/colorDark"
                        app:civ_shadow_radius="2" />

                    <TextView
                        android:id="@+id/txtUploadPhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/imgUserImage"
                        android:text="@string/register_user_photo"
                        android:textColor="@color/colorDark"
                        android:textSize="15sp" />

                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>


    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="5dp">

        <Button
            android:id="@+id/btnRegisterNow"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/sign_in_selector"
            android:text="@string/register_now"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>
</RelativeLayout>