<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtServiceDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subCategoryLayout"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="Service Details"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:typeface="monospace" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txtServiceDetails"
        android:scrollbars="none">



    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/layoutServiceTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputServiceTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:theme="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtServiceTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/service_title"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/title_color"
                        android:textColorHint="@color/colorDark"
                        android:textSize="15sp"
                        android:typeface="serif" />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutTagLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutServiceTitle"
                android:background="@color/colorWhite">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputTagLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:theme="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtTagLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tag_line"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/title_color"
                        android:textColorHint="@color/colorDark"
                        android:textSize="15sp"
                        android:typeface="serif" />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutGallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutTagLine"
                android:background="@color/colorWhite">


                <FrameLayout
                    android:id="@+id/layoutRoot0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <ImageView
                        android:id="@+id/imgGalleryAd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_add_photos" />

                    <TextView
                        android:id="@+id/txtImageCount"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="right|top"
                        android:background="@drawable/bage_circle"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"
                        android:visibility="visible" />
                </FrameLayout>

                <TextView
                    android:id="@+id/txtPhotoAdvice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layoutRoot0"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/gallery_advice_first"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/txtPhotoAdviceSecond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtPhotoAdvice"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5sp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/gallery_advice_second"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:typeface="serif" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/galleryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_below="@+id/layoutGallery">

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null"
                    android:padding="5dp"
                    android:layout_centerHorizontal="true"
                    android:dividerHeight="5dp"
                    android:id="@+id/galleryRecyclerView">
                </android.support.v7.widget.RecyclerView>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/bottomLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/galleryLayout"
                android:padding="@dimen/activity_horizontal_margin">

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/sign_in_selector"
                    android:text="Back"
                    android:textColor="@color/colorWhite"
                    android:typeface="monospace" />

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/sign_up_selector"
                    android:text="Next"
                    android:textColor="@color/colorWhite"
                    android:typeface="monospace" />

            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>